--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,8 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
         <com.google.android.material.imageview.ShapeableImageView
@@ -96,7 +97,8 @@
             android:id="@+id/m5"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
         <com.google.android.material.imageview.ShapeableImageView
@@ -104,7 +106,8 @@
             android:id="@+id/m6"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
     </LinearLayout>
@@ -123,7 +126,8 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
         <com.google.android.material.imageview.ShapeableImageView
@@ -131,7 +135,8 @@
             android:layout_weight="1"
             android:id="@+id/m8"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
         <com.google.android.material.imageview.ShapeableImageView
@@ -139,7 +144,8 @@
             android:layout_weight="1"
             android:id="@+id/m9"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
     </LinearLayout>
@@ -158,7 +164,8 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
         <com.google.android.material.imageview.ShapeableImageView
@@ -166,7 +173,8 @@
             android:id="@+id/m11"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
         <com.google.android.material.imageview.ShapeableImageView
@@ -174,7 +182,8 @@
             android:id="@+id/m12"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/meteor">
 
         </com.google.android.material.imageview.ShapeableImageView>
     </LinearLayout>
